Fix scrollbar design

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -125,33 +125,37 @@ a {
   }
 }
 
-/* width */
-::-webkit-scrollbar {
-  width: 8px;
-}
+/* Custom scrollbar */
+@layer utilities {
+  ::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: rgb(246, 241, 235);
+  }
+  .dark ::-webkit-scrollbar-track {
+    background: rgb(45, 51, 59);
+  }
 
-::-webkit-scrollbar {
-  height: 8px;
-}
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: rgb(90, 87, 80);
+    border-radius: 5px;
+  }
+  .dark ::-webkit-scrollbar-thumb {
+    background: rgb(80, 87, 90);
+    border-radius: 5px;
+  }
 
-/* Track */
-::-webkit-scrollbar-track {
-  background: rgb(246, 241, 235);
-}
-
-.dark::-webkit-scrollbar-track {
-  background: rgb(45, 51, 59);
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: #888;
-  border-radius: 5px;
-}
-
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: rgb(70, 67, 60);
+  }
+  .dark ::-webkit-scrollbar-thumb:hover {
+    background: rgb(60, 67, 70);
+  }
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
